changed close button in modal windows to default (inside) so it works on small screens, minor fix to skill ikon sizing to make them responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,7 +484,7 @@ div.progress {
 .l-inline-skill img {
   display: block;
   margin: 0 auto;
-  height: 25px;
+  max-height: 25px;
 }
 
 span.progress-percentage.photoshop {
